Feat:Adding role-based protection router